Revise README for cloning and running instructions
Updated instructions for cloning the repository and running the application.